# llm-guardrails-benchmark

./: .gitignore  README.md  pyproject.toml  test_setup.py
src/benchmarks/: analyze_results.py  run_benchmark.py  visualize_results.py
src/dashboard/: app.py
src/guardrail_wrappers/: guardrail_implementations.py
src/models/: ollama_wrapper.py
src/utils/: dataset_loader.py
