[project]
name = "guardrails-benchmark"
version = "0.1.0"
description = "Benchmarking open-source guardrails with Ollama models"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "ollama>=0.1.0",
    "guardrails-ai>=0.4.0",
    "nemoguardrails>=0.8.0",
    "llm-guard>=0.3.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "datasets>=2.16.0",
    "huggingface-hub>=0.20.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.18.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"